<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ *******************************************************************************
  ~   Copyright (c) 2013-2014 Francesco Azzola (http://www.survivingwithandroid.com).
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~  *****************************************************************************
  -->
<resources>

    <string name="app_name">PegBoardv1</string>
    <string name="action_settings">Settings</string>
   <string name="action_donate">Donate</string>
    
    <!--  Menu Label -->
    <string name="menu_title">Peg Board menu</string>
    <string name="menu_pin">Pins</string>
	<string name="menu_save">Save</string>
	<string name="menu_clear">Clear</string>
	<string name="menu_bkg">Background</string>
	<string name="dlg_delete">Are you sure?</string>
	<string name="dlg_bkg">Background</string>
	<string name="msgYes">Yes</string>
	<string name="msgNo">No</string>
	<string name="dlg_save">Save your draw</string>
	<string name="msgSave">Save</string>
	<string name="msgCancel">Cancel</string>
	<string name="msgChange">Change</string>
	<string name="msgReset">Reset</string>
	<string name="msgFileName">Please, enter the file name here</string>
	<string name="msgSaveFileError">An error has occured while saving the image</string>
	
	<!-- Donate -->
	<string name="dlg_donate_msg">Donate</string>
	<string name="dlg_donate_ok">buy me a coffe &#8364;1,00</string>
	<string name="dlg_donate_cancel">Cancel </string>
</resources>
