<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ *******************************************************************************
  ~   Copyright (c) 2013-2014 Francesco Azzola (http://www.survivingwithandroid.com).
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~  *****************************************************************************
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:background="@drawable/dlg_gradient">
    
    <TextView android:id="@+id/dlgMsg"
                    android:layout_width="wrap_content"
    				android:layout_height="wrap_content"
    				android:text="@string/dlg_save"
    				android:layout_centerHorizontal="true"    				
    				android:layout_margin="15dp"
    				style="@style/msgStyle"
    				
    />
    
    <EditText android:id="@+id/edtFileName"
                   android:layout_width="wrap_content"
     			  android:layout_height="wrap_content"
     			  android:hint="@string/msgFileName"
     			  android:layout_below="@id/dlgMsg"
     			  android:layout_centerHorizontal="true"
    />
    
    <LinearLayout android:layout_width="wrap_content"
    				     android:layout_height="wrap_content"
    				     android:orientation="horizontal"
    				     android:layout_centerHorizontal="true"
    				     android:layout_below="@id/edtFileName">
        
    <TextView android:id="@+id/dlgSave" 
        			android:layout_width="wrap_content"
    				android:layout_height="wrap_content"
    				android:text="@string/msgSave"
    				style="@style/msgStyleYes"/>
  
   <TextView android:id="@+id/dlgCancel" 
        			android:layout_width="wrap_content"
    				android:layout_height="wrap_content"
    				android:text="@string/msgCancel"
    				style="@style/msgStyleNo"
    				android:layout_marginLeft="20dp"
    			  />
      
        
    </LinearLayout>
    
</RelativeLayout>
