<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ *******************************************************************************
  ~   Copyright (c) 2013-2014 Francesco Azzola (http://www.survivingwithandroid.com).
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~  *****************************************************************************
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/tilebkg"
    android:padding="5dp">

    <TextView
        android:id="@+id/lblMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/menu_title" />

  
    
    <GridView android:id="@+id/pinGrid"              
    				android:layout_width="wrap_content" 
   					android:layout_height="wrap_content"
   					android:columnWidth="70dp"   					
    				android:numColumns="auto_fit"
    				android:verticalSpacing="4dp"
    				android:horizontalSpacing="4dp"
    				android:stretchMode="columnWidth"
    				android:layout_below="@id/lblMenu"
    				android:layout_centerHorizontal="true"/>
    
    
    <TextView android:id="@+id/saveTxt"
     				android:layout_width="wrap_content" 
   					android:layout_height="wrap_content"
   					android:text="@string/menu_save"
   					android:layout_below="@id/pinGrid"
   					android:layout_alignParentLeft="true"
   					style="@style/PinMenuBtnSave"
   					/>
    
    <TextView android:id="@+id/clearTxt"
     				android:layout_width="wrap_content" 
   					android:layout_height="wrap_content"
   					android:text="@string/menu_clear"
   					android:layout_below="@id/saveTxt"
   					android:layout_alignParentRight="true"
   					android:layout_alignBaseline="@id/saveTxt"
   					style="@style/PinMenuBtnClr"
   					/>
 
    
    <TextView android:id="@+id/bkgTxt"
     				android:layout_width="wrap_content" 
   					android:layout_height="wrap_content"
   					android:text="@string/menu_bkg"   					
   					android:layout_centerHorizontal="true"
   					android:layout_below="@id/saveTxt"
   					style="@style/PinMenuBtnBkg"
   					/>
     
         			
    

</RelativeLayout>